--- a/vercel.json
+++ b/vercel.json
@@ -5,4 +5,10 @@
         "use": "@vercel/node"
       }
     ]
-  }
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/index.html"
+      }
+    ]
+}
