--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "builds": [
       {
-        "src": "dist/**/*",
+        "src": "package.json",
         "use": "@vercel/static"
       }
     ],
@@ -10,5 +10,11 @@
         "source": "/(.*)",
         "destination": "/index.html"
       }
-    ]
-}
+    ],
+    "build": {
+      "env": {
+        "NODE_ENV": "production"
+      },
+      "command": "npm run build"
+    }
+  }
