--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Portfolio personnel moderne avec Vue.js",
   "main": "index.js",
   "scripts": {
-    "prebuild": "chmod +x ./node_modules/.bin/vite"
+    "prebuild": "chmod +x ./node_modules/.bin/vite",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
